[gd_scene load_steps=6 format=2]

[ext_resource path="res://AI/AITwo/TwoFront/TwoFront.tscn" type="PackedScene" id=1]
[ext_resource path="res://AI/AITwo/TwoRight/TwoRight.tscn" type="PackedScene" id=2]
[ext_resource path="res://AI/AITwo/TwoLeft/TwoLeft.tscn" type="PackedScene" id=3]
[ext_resource path="res://AI/AITwo/TwoBack/TwoBack.tscn" type="PackedScene" id=4]
[ext_resource path="res://AI/AITwo/AITwo.gd" type="Script" id=5]

[node name="AITwo" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="TwoFront" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.720001, 0.8 )

[node name="TwoBack" parent="." instance=ExtResource( 4 )]
visible = false

[node name="TwoLeft" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -1.41423, 2.82841 )
scale = Vector2( 1, 1.08 )

[node name="TwoRight" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, 4.24263 )
scale = Vector2( 1, 1.08 )
